# near-state-indexer

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: configs.rs  main.rs
