[package]
name = "state-indexer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.61.0"

[dependencies]
aws-types = "0.13.0"
aws-sdk-s3 = "0.13.0"
anyhow = "1.0.51"
borsh = "0.9.3"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
http = "0.2"
humantime = "2.1.0"
itertools = "0.10.0"
openssl-probe = "0.1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"

near-primitives-core = "0.14.0"
near-indexer-primitives = "0.14.0"
near-jsonrpc-client = "0.4.0-beta.0"
near-lake-framework = "0.5.0"
